# hackathon_backend

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  aer_heatmap.json  debug_openaq_api.py  hcho_heatmap.json  no2_heatmap.json  o3_heatmap.json  pyproject.toml  requirements.txt  simple_test.py  so2_heatmap.json  test_api.py  test_filters.py  test_manual_extraction.py  test_new_york.rest  test_openaq_direct.py  test_simple_api.rest  test_system.py  test_washington.py  test_washington.rest
data/: COMO_REVISAR_DATOS.md  CONSULTAR_NUEVA_YORK.md
data/air_quality/: README.md  air_quality_airnow_20251004_143617.json  air_quality_mock_20251004_143819.json  air_quality_mock_20251004_143921.json  air_quality_mock_20251004_143926.json  air_quality_mock_20251004_144029.json  air_quality_mock_20251004_144136.json  air_quality_mock_20251004_144434.json  air_quality_mock_20251004_144503.json  air_quality_mock_20251004_144755.json  air_quality_mock_20251004_150150.json  air_quality_mock_20251004_150214.json  air_quality_mock_20251004_150231.json  air_quality_mock_20251004_150247.json  air_quality_mock_20251004_150337.json  air_quality_mock_20251004_150427.json  air_quality_mock_20251004_150810.json  air_quality_mock_20251004_150848.json  air_quality_mock_20251004_150933.json  air_quality_mock_20251004_151005.json  air_quality_mock_20251004_151130.json  (+19 more)
src/: air_quality_client.py  database.py  main.py  mock_data_generator.py  models.py  openaq_client.py  recargarTempo.py  scheduler.py  schemas.py  tempo.py  tempoNacho.py  tempoNachoHCHO.py  tempoNachoNO2.py
(+3 files in other folders)
