[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "dotenv>=0.9.9",
    "earthaccess>=0.15.1",
    "fastapi>=0.118.0",
    "matplotlib>=3.10.6",
    "httpx>=0.28.1",
    "netcdf4>=1.7.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "xarray>=2025.9.1",
    "apscheduler>=3.11.0",
]
